--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
 ml-dtypes==0.2.0
+mysqlclient==2.2.0
 mysql-connector-python==8.2.0
 numpy==1.26.2
 oauthlib==3.2.2
