--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+PyMySQL
 colorama==0.4.6
 Flask==3.0.0
 Flask-MySQLdb==2.0.0
