--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
-PyMySQL
+mysql-connector-python
+plotly
 colorama==0.4.6
 Flask==3.0.0
 Flask-MySQLdb==2.0.0
