--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+mysql
 mysql-connector-python
 plotly
 colorama==0.4.6
